fix admin shift sidebar overlap

--- a/src/app/components/stylesheet.css
+++ b/src/app/components/stylesheet.css
@@ -1,7 +1,7 @@
 .main-sidebar {
     position: fixed; 
     right: 0;
-    top: 99px;     
+    top: 125px;     
     width: 30rem;     
     z-index: 50;
     background: #fff;
